fea/add api getId,update,delete exam and add cors